feat(view): added localization for MainWorkArea.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -333,3 +333,8 @@ userDirectoryOpen=Open user directory
 # Zoom
 zoomIncrease=Increase
 zoomReduce=Reduce
+# Any Words
+vertices=vertices
+edges=edges
+# Main Work Area
+mainWorkAreaEnterCommand=Enter command
