feat(view): added localization for SettingsBlock.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -338,3 +338,6 @@ vertices=vertices
 edges=edges
 # Main Work Area
 mainWorkAreaEnterCommand=Enter command
+# Settings
+settingsCollapse=Collapse
+settingsExpand=Expand
