feat(view): added localization for SettingsDescriptionIconButton.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -341,3 +341,5 @@ mainWorkAreaEnterCommand=Enter command
 # Settings
 settingsCollapse=Collapse
 settingsExpand=Expand
+settingsHideDescription=Hide description
+settingsShowDescription=Show description
