--- a/app/src/main/resources/languages/ru.lang
+++ b/app/src/main/resources/languages/ru.lang
@@ -341,3 +341,5 @@ mainWorkAreaEnterCommand=Введите команду
 # Settings
 settingsCollapse=Сокрыть
 settingsExpand=Раскрыть
+settingsHideDescription=Спрятать описание
+settingsShowDescription=Показать описание
