feat(view): added localization for NumberTextFieldLine.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -343,3 +343,5 @@ settingsCollapse=Collapse
 settingsExpand=Expand
 settingsHideDescription=Hide description
 settingsShowDescription=Show description
+# Text Field
+textField=Text field
