feat(localization): renamed parameter mainWorkAreaEnterCommand on enterCommand

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -336,8 +336,7 @@ zoomReduce=Reduce
 # Any Words
 vertices=vertices
 edges=edges
-# Main Work Area
-mainWorkAreaEnterCommand=Enter command
+enterCommand=Enter command
 # Settings
 settingsCollapse=Collapse
 settingsExpand=Expand
