--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -100,6 +100,8 @@ colorsWarningColor=Warning Color
 colorsVertexMainColor=Vertex Main Color
 colorsHoveredBorderColor=Hovered Border Color
 colorsEdgeMainColor=Edge Main Color
+colorsShortestPathColor=Shortest path found color
+colorsOtherPathsColor=Other found paths color
 colorsCanvasBackgroundColor=Canvas Background Color
 colorsCommandLineBackgroundColor=Command Line Background Color
 # Main Screen Block
@@ -226,6 +228,8 @@ descriptionWarningColor=Color for warnings: yellow icons, frames, notifications 
 descriptionVertexMainColor=The primary color for displaying vertices.
 descriptionHoveredBorderColor=The color of the border when hovering over the element.
 descriptionEdgeMainColor=The primary color for displaying edges between vertices on the graph.
+descriptionShortestPathColor=Color to display edges of the shortest path found.
+descriptionOtherPathsColor=Color to display edges that are not always on the shortest path.
 descriptionCanvasBackgroundColor=The background color for graph visualization.
 descriptionCommandLineBackgroundColor=The background color for the command line.{nextLine}\
     {nextLine}\
