feat(view): updated localization for MainMenu.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -14,6 +14,8 @@ mainMenuButtonAnalytics=Analytics
 mainMenuAnalyticsIconDescription=Analytics Icon
 mainMenuButtonSettings=Settings
 mainMenuSettingsIconDescription=Settings Icon
+mainMenuButtonHelp=Help
+mainMenuHelpIconDescription=Help Icon
 
  ! Title Bar
 
