fix(localization): updated value for titleBarHelpButton in ru.lang

--- a/app/src/main/resources/languages/ru.lang
+++ b/app/src/main/resources/languages/ru.lang
@@ -34,7 +34,7 @@ titleBarFileSaveButton=Сохранить
 titleBarFileSaveAsIconDescription=Иконка сохранения как
 titleBarFileSaveAsButton=Сохранить как..
 titleBarSettingsButton=Настройки
-titleBarHelpButton=Помощь
+titleBarHelpButton=Справка
 titleBarMinimizeIconDescription=Свернуть
 titleBarRecoverIconDescription=Восстановить
 titleBarMaximizeIconDescription=Развернуть
