--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -144,6 +144,13 @@ findPathMaxPathsPlaceholder=Path count
 findPathFindStrategy=Find strategy
 findPathFindButton=Find
 
+! Help
+helpTitle=Help
+helpSubTitle=for using CoreMapX
+helpCommandBlockName=Commands
+helpGraphFormatsBlockName=Graph formats
+helpUserDirectoryBlockName=User directory
+
  ! Top Menu
 topMenuActions=Actions
 topMenuDrawGraphAgain=Draw the graph again
