feat(view): added localization for CommandBlock.kt

--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -150,6 +150,62 @@ helpSubTitle=for using CoreMapX
 helpCommandBlockName=Commands
 helpGraphFormatsBlockName=Graph formats
 helpUserDirectoryBlockName=User directory
+# Command Block
+commandGeneralInformationTitle=General information
+commandGeneralInformationText1=Most commands have the format: `<Type> <Entity> <Parameters>`.{nextLine}\
+    {nextLine}\
+    To execute multiple commands, use the separator `;`.{nextLine}\
+    {nextLine}\
+    The help provides examples of commands that can be tested by creating a new graph.{nextLine}\
+    {nextLine}\
+    Parameters can be set explicitly using a colon character (with a name, for example, `id:1`) \
+    or implicitly (without a name, in strict order).
+commandAttention1Point1=ATTENTION 1.1{nextLine}\
+    Mixing explicit and implicit writing forms is prohibited. For example, the command `add vertex 1 label:label1` is invalid.
+commandExample1Point1=Example 1.1{nextLine}\
+    A weighted graph with vertices and edges defined explicitly and implicitly:
+commandAttention1Point2=ATTENTION 1.2{nextLine}\
+    In unweighted graphs, the `weight` parameter is not required and is ignored.
+commandAddTitle=The add command
+commandAddText1=Parameters are available for `add vertex` (in the order of the implicit entry):{nextLine}\
+    • `id` — a Long number (8 bytes){nextLine}\
+    • `label` — string without spaces and characters `:` colons{nextLine}\
+    {nextLine}\
+    Options are available for `add edge` (in the order of the implicit entry):{nextLine}\
+    • `from` — id of the vertex from which the edge originates{nextLine}\
+    • `to` — id of the vertex the edge goes to{nextLine}\
+    • `weight` — a Long number (8 bytes), specified for weighted graphs
+commandRmTitle=The rm/remove command
+commandAttention1Point3=ATTENTION 1.3{nextLine}\
+    The `rm` and `remove` commands are equivalent, and any form can be used.
+commandRmText1=The parameter is used for the `rm vertex`:{nextLine}\
+    • `id` — a Long number (8 bytes){nextLine}\
+    {nextLine}\
+    For `rm edge`, the parameters are used (in the order of the implicit entry):{nextLine}\
+    • `from` — id of the vertex from which the edge is being removed{nextLine}\
+    • `to` — id of the vertex to which the edge is being deleted{nextLine}\
+    {nextLine}\
+    You can also delete an edge by its unique `id`, which is automatically assigned to each edge.
+commandAttention1Point4=ATTENTION 1.4{nextLine}\
+    Let there be a graph with vertices 1 and 2, as well as edges (1, 2). \
+    Executing the `rm edge from:2 to:1` command will remove the edge (1, 2), \
+    since in an undirected graph (1, 2) and (2, 1) are the same edge. \
+    In a directed graph, edges (1, 2) will remain.
+commandSetTitle=The set command
+commandSetText1=The `set strategy` parameter is used:{nextLine}\
+    • `strategy` — a string with the name of the graph vertex placement strategy. \
+    Acceptable values: Random, Circular, Force-Directed.
+commandSetText2=Changing the strategy to Random (Random vertex location):
+commandSetText3=Changing the strategy to Circular (The vertices are arranged in a circle):
+commandSetText4=Changing strategy to Force-Directed \
+    (The vertices are dynamically moved a certain number of iterations according to the algorithm):
+commandClearTitle=The clear command
+commandClearText1=No parameters are set for `clear`. It is needed to clear messages in the console.
+commandGraphClearTitle=The graph_clear command
+commandGraphClearText1=No parameters are set for `graph_clear`. She's needed to completely clean up the count \
+    (All vertices and edges will be deleted.). Be careful with her.
+commandHelpTitle=The help command
+commandHelpText1=No parameters are set for `help`. You need it to get a quick reference on the most popular commands.
 # Graph Formats Block
 graphFormatsGeneralInformationTitle=General information
 graphFormatsGeneralInformationText1=This section describes the features of the supported graph storage formats: \
